--- a/index.htm
+++ b/index.htm
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Railtrails GPX Exporter</title>
+    <title>railtrails.org.au GPX Exporter</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -52,13 +52,13 @@
 <body>
 
 <header>
-    <h1>Railtrails GPX Exporter</h1>
+    <h1>Rail Trails GPX Exporter</h1>
 </header>
 
 <div class="container">
     <h2>About</h2>
     <p>
-        The Railtrails GPX Exporter is a simple tool that allows you to extract trail data from the Railtrails website and export it as a GPX file. GPX files are widely used for storing GPS track data and can be imported into various mapping and navigation applications.
+        The railtrails.org.au GPX Exporter is a simple tool that allows you to extract map data from the railtrails.org.au website and export it as a GPX file. GPX files are widely used for storing GPS track data and can be imported into various mapping and navigation applications.
     </p>
 
     <h2>How to Use</h2>
@@ -66,7 +66,7 @@
         To use this tool, simply drag the following link to your bookmarks bar. Then, whenever you're on a Railtrails page with a trail map, click the bookmarklet to download the trail data as a GPX file.
     </p>
     <p>
-        <a href="javascript:(function()%7Bfunction callback()%7B(function(%24)%7Bvar jQuery%3D%24%3Bfunction callback()%7BgetGpx()%7Dvar s%3Ddocument.createElement('script')%3Bs.src%3D'https%3A%2F%2Fgist.githubusercontent.com%2FLuen%2F86d702ba35f2eef5a9a03432dd9be71a%2Fraw%2Fec2aa5f8fb5b1ad2d5dca40c8dc613ae3ef02b4b%2Frailtrails.js'%3Bif(s.addEventListener)%7Bs.addEventListener('load'%2Ccallback%2Cfalse)%7Delse if(s.readyState)%7Bs.onreadystatechange%3Dcallback%7Ddocument.body.appendChild(s)%3B%7D)(jQuery.noConflict(true))%7Dvar s%3Ddocument.createElement('script')%3Bs.src%3D'https%3A%2F%2Fcode.jquery.com%2Fjquery-3.6.0.min.js'%3Bif(s.addEventListener)%7Bs.addEventListener('load'%2Ccallback%2Cfalse)%7Delse if(s.readyState)%7Bs.onreadystatechange%3Dcallback%7Ddocument.body.appendChild(s)%3B%7D)()" class="bookmarklet">Railtrails GPX Exporter</a>
+        <a href="javascript:(function()%7Bfunction callback()%7B(function(%24)%7Bvar jQuery%3D%24%3Bfunction callback()%7BgetGpx()%7Dvar s%3Ddocument.createElement('script')%3Bs.src%3D'https%3A%2F%2Frailtrails.luenwarneke.com%2Fmaptogpx.js'%3Bif(s.addEventListener)%7Bs.addEventListener('load'%2Ccallback%2Cfalse)%7Delse if(s.readyState)%7Bs.onreadystatechange%3Dcallback%7Ddocument.body.appendChild(s)%3B%7D)(jQuery.noConflict(true))%7Dvar s%3Ddocument.createElement('script')%3Bs.src%3D'https%3A%2F%2Fcode.jquery.com%2Fjquery-3.6.0.min.js'%3Bif(s.addEventListener)%7Bs.addEventListener('load'%2Ccallback%2Cfalse)%7Delse if(s.readyState)%7Bs.onreadystatechange%3Dcallback%7Ddocument.body.appendChild(s)%3B%7D)()" class="bookmarklet">Railtrails GPX Exporter</a>
     </p>
 
     <h2>Instructions</h2>
@@ -79,7 +79,7 @@
 </div>
 
 <footer>
-    <p>&copy; 2024 Railtrails GPX Exporter | Created by [Your Name]</p>
+    <p>&copy; 2024 Railtrails GPX Exporter | Created by Luen Warneke</p>
 </footer>
 
 </body>
