--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
         To use this tool, simply drag the following link to your bookmarks bar. Then, whenever you're on a Railtrails page with a trail map, click the bookmarklet to download the trail data as a GPX file.
     </p>
     <p>
-        <a href="javascript:(function()%7Bfunction callback()%7B(function(%24)%7Bvar jQuery%3D%24%3Bfunction callback()%7BgetGpx()%7Dvar s%3Ddocument.createElement('script')%3Bs.src%3D'https%3A%2F%2Frailtrails.luenwarneke.com%2Fmaptogpx.js'%3Bif(s.addEventListener)%7Bs.addEventListener('load'%2Ccallback%2Cfalse)%7Delse if(s.readyState)%7Bs.onreadystatechange%3Dcallback%7Ddocument.body.appendChild(s)%3B%7D)(jQuery.noConflict(true))%7Dvar s%3Ddocument.createElement('script')%3Bs.src%3D'https%3A%2F%2Fcode.jquery.com%2Fjquery-3.6.0.min.js'%3Bif(s.addEventListener)%7Bs.addEventListener('load'%2Ccallback%2Cfalse)%7Delse if(s.readyState)%7Bs.onreadystatechange%3Dcallback%7Ddocument.body.appendChild(s)%3B%7D)()" class="bookmarklet">Railtrails GPX Exporter</a>
+        <a href="javascript:(function()%7Bvar s%3Ddocument.createElement('script')%3Bs.src%3D'https%3A%2F%2Frailtrails.luenwarneke.com%2Fmaptogpx.js'%3Bdocument.body.appendChild(s)%7D)()">Railtrails GPX Exporter</a>
     </p>
 
     <h2>Instructions</h2>
