--- a/index.html
+++ b/index.html
@@ -3,13 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>railtrails.org.au GPX Exporter</title>
+    <title>RailTrails.org.au GPX Exporter</title>
     <style>
         body {
             font-family: Arial, sans-serif;
             margin: 0;
             padding: 0;
             background-color: #f4f4f4;
+        }
+        h1, h2 {
+            color: #333;
         }
         header {
             background-color: #333;
@@ -34,9 +37,6 @@
             background-color: #fff;
             border-radius: 8px;
             box-shadow: 0 0 10px rgba(0,0,0,0.1);
-        }
-        h1, h2 {
-            color: #333;
         }
         p {
             line-height: 1.6;
@@ -63,7 +63,7 @@
 
 <header>
     <h1>Rail Trails GPX Exporter</h1>
-    <a href="https://github.com/Luen/RailTrailsExpor" target="_blank" class="github-link">
+    <a href="https://github.com/Luen/RailTrailsExport" target="_blank" class="github-link">
         <img src="https://github.githubassets.com/images/modules/logos_page/GitHub-Mark.png" alt="GitHub">
     </a>
 </header>
