--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 <body>
 
 <header>
-    <h1>Rail Trails GPX Exporter</h1>
+    <h1>RailTrails.org.au GPX Exporter</h1>
     <a href="https://github.com/Luen/RailTrailsExport" target="_blank" class="github-link">
         <img src="https://github.githubassets.com/images/modules/logos_page/GitHub-Mark.png" alt="GitHub">
     </a>
@@ -71,28 +71,28 @@
 <div class="container">
     <h2>About</h2>
     <p>
-        The railtrails.org.au GPX Exporter is a simple tool that allows you to extract map data from the railtrails.org.au website and export it as a GPX file. GPX files are widely used for storing GPS track data and can be imported into various mapping and navigation applications.
+        The RailTrails.org.au GPX Exporter is a simple tool that allows you to extract map data from the RailTrails.org.au website and export it as a GPX file. GPX files are widely used for storing GPS track data and can be imported into various mapping and navigation applications.
     </p>
 
     <h2>How to Use</h2>
     <p>
-        To use this tool, simply drag the following link to your bookmarks bar. Then, whenever you're on a Railtrails page with a trail map, click the bookmarklet to download the trail data as a GPX file.
+        To use this tool, simply drag the following link to your bookmarks bar. Then, whenever you're on a RailTrails page with a trail map, click the bookmarklet to download the trail data as a GPX file.
     </p>
     <p>
-        <a href="javascript:(function()%7Bvar s%3Ddocument.createElement('script')%3Bs.src%3D'https%3A%2F%2Frailtrails.luenwarneke.com%2Fmaptogpx.js'%3Bdocument.body.appendChild(s)%7D)()">Railtrails GPX Exporter</a>
+        <a href="javascript:(function()%7Bvar s%3Ddocument.createElement('script')%3Bs.src%3D'https%3A%2F%2Frailtrails.luenwarneke.com%2Fmaptogpx.js'%3Bdocument.body.appendChild(s)%7D)()" class="bookmarklet">RailTrails GPX Exporter</a>
     </p>
 
     <h2>Instructions</h2>
     <ol>
-        <li>Drag the "Railtrails GPX Exporter" link above to your bookmarks bar.</li>
-        <li>Go to a trail page on the Railtrails website.</li>
+        <li>Drag the "RailTrails GPX Exporter" link above to your bookmarks bar.</li>
+        <li>Go to a trail page on the RailTrails website.</li>
         <li>Click the bookmarklet in your bookmarks bar.</li>
         <li>Your GPX file will be automatically downloaded.</li>
     </ol>
 </div>
 
 <footer>
-    <p>&copy; 2024 RailTrails GPX Exporter | Created by Luen Warneke</p>
+    <p>&copy; 2024 RailTrails.org.au GPX Exporter | Created by Luen Warneke</p>
 </footer>
 
 </body>
