--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         }
         header {
             background-color: #333;
-            color: #fff;
+            color: #fff !important;
             padding: 10px 20px;
             text-align: center;
             position: relative;
