--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
             padding: 0;
             background-color: #f4f4f4;
         }
-        h1, h2 {
+        h2 {
             color: #333;
         }
         header {
             background-color: #333;
-            color: #fff !important;
+            color: #fff;
             padding: 10px 20px;
             text-align: center;
             position: relative;
